// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextInput /> > labelTitle > sets label 1`] = `
<div
  class="form-control "
>
  <label
    class="label"
  >
    <span
      class="label-text text-base-content "
    >
      My Title
    </span>
  </label>
  <input
    class="input input-bordered w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> > renders properly 1`] = `
<div
  class="form-control "
>
  <input
    class="input input-bordered w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;
